# yap

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  LICENSE  NOTICE  README.md  SETUP.md  render.yaml
.github/workflows/: android-build.yml  desktop-release.yml  keepalive.yml
agent/: agent.py
apps/android/: README.md  build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/kotlin/com/ripple/app/: MainActivity.kt  RippleRepository.kt  RippleViewModel.kt
apps/android/app/src/main/kotlin/com/ripple/app/ime/: RippleImeService.kt
apps/android/app/src/main/res/drawable/: banner.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
apps/android/app/src/main/res/values/: colors.xml  themes.xml
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src/: index.html  main.js  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: inject.rs  lib.rs  main.rs
apps/ios/: README.md
docs/: architecture.md  protocol.md  security.md
prompts/: 00-START-HERE.md  android.md  desktop.md
server/: _basetest.mjs  _hosttest.mjs  package-lock.json  package.json  server.js
server/helpers/: ripple-linux.desktop  ripple-linux.sh  ripple-mac.command  ripple-windows.ps1  yap-linux.desktop  yap-linux.sh  yap-mac.command  yap-windows.ps1
server/public/: index.html  manifest.webmanifest  sw.js
server/public/dl/: yap-linux.sh  yap-mac.command  yap-windows.bat
server/scripts/: gen-icons.mjs
(+4 files in other folders)
