[package]
name = "ripple-desktop"
version = "0.1.0"
description = "Ripple Desktop — receive text from your phone and have it typed at your cursor"
authors = ["Ripple"]
edition = "2021"

[lib]
name = "ripple_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared E2E crypto — the exact same math as the web app (verified vectors).
ripple-core = { path = "../../../packages/core-rs" }

# Relay client.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"

# Inject text at the OS cursor, and the clipboard fallback.
enigo = "0.2"
# `wayland-data-control` lets the clipboard work on native Wayland sessions
# (Ubuntu's default), not just X11 — otherwise Auto-copy does nothing there.
arboard = { version = "3", features = ["wayland-data-control"] }

# Stable per-device id, persisted locally.
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Prompt for the one-time Accessibility permission keystroke injection needs.
macos-accessibility-client = "0.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13.11", default-features = false, features = ["tokio", "remote_desktop", "screencast"] }
